--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -41,8 +41,22 @@
 }
 .description{
     padding-top: 5px;
+    text-align: center;
+}
+.description > li > p:first-child{
+    float: left;
+    width: 50%;
+    margin-bottom: 0;
+}
+.description > li > p:nth-child(2){
+    float: right;
+    width: 50%;
+    margin-bottom: 0;
 }
 ul > li{
     list-style: circle;
     text-align: left;
+}
+i{
+    font-size: 0.8rem;
 }
