--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -37,10 +37,11 @@ h2,h3,h4,h5,h6{
     margin: 0 auto;
     width: 80%;
     text-align: center;
-    font-size: 4rem;
     color: #343a40;
 }
-
+.iconWrapper > i {
+    font-size: 4rem;
+}
 .iconWrapper > * {
     padding: 10px;
     
