--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -36,3 +36,9 @@
     vertical-align: middle;
     box-shadow: 1px 1px 5px 1px #ccc;
 }
+.generatedBoxLayout{
+    width: 85%;
+    margin: 0 auto;
+    border-radius: 5px;
+    line-height: 70px;
+}
